# HumanModelAnimation

./: .gitignore  CMakeLists.txt  Makefile  Makefile2  Makefile_mac  README.md  camera.cpp  main  main.cpp
MotionData/: Trial000.bvh
include/: IK.h  blend.h  bvh.h  bvh_struct.h  camera.h  joint.h  node.h  solver.h  tree.h
src/: IK.cpp  blend.cpp  bvh.cpp  camera.cpp  joint.cpp  main.cpp  node.cpp  solver.cpp  tree.cpp
